--- a/app/src/main/res/layout/activity_first_onboarding.xml
+++ b/app/src/main/res/layout/activity_first_onboarding.xml
@@ -22,11 +22,14 @@
 
     <Button
         android:id="@+id/btnOpenSecond"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="320dp"
+        android:layout_height="56dp"
+        android:layout_marginStart="24dp"
         android:layout_marginTop="32dp"
-        android:textSize="16sp"
+        android:layout_marginEnd="24dp"
         android:text="Next Screen"
+        android:textAllCaps="true"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
