--- a/app/src/main/res/layout/activity_first_onboarding.xml
+++ b/app/src/main/res/layout/activity_first_onboarding.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".FirstOnboardingActivity">
+    tools:context=".l_16.FirstOnboardingActivity">
 
 
     <TextView
