--- a/app/src/main/res/layout/activity_second_onboarding.xml
+++ b/app/src/main/res/layout/activity_second_onboarding.xml
@@ -5,7 +5,7 @@
     android:id="@+id/main"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".SecondOnboardingActivity">
+    tools:context=".l_16.SecondOnboardingActivity">
 
     <TextView
         android:id="@+id/textView"
