--- a/app/src/main/res/layout/activity_my_notes.xml
+++ b/app/src/main/res/layout/activity_my_notes.xml
@@ -57,7 +57,7 @@
         android:layout_marginStart="24dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="24dp"
-        android:text="Add Note"
+        android:text="@string/add_note"
         android:textAllCaps="true"
         android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
